# FASTXE-CALCULATOR

./: README.md  pyproject.toml
fastxe_calculator/: __init__.py  __main__.py  calculator.py  cli.py  excel.py  models.py  pdf_parser.py  web_app.py
fastxe_calculator/static/: dashboard.js  styles.css
fastxe_calculator/templates/: dashboard.html
